--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,21 @@
         </dependency>
     </dependencies>
 
+    <!-- Distribution management -->
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>Releases</name>
+            <url>http://repo.frederik-schmitt.de/content/repositories/releases</url>
+        </repository>
+
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>Snapshots</name>
+            <url>http://repo.frederik-schmitt.de/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
