--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>lib-database</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <dependencies>
         <dependency>
             <groupId>javax.inject</groupId>
@@ -23,9 +22,9 @@
         </dependency>
 
         <dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>1.3.7</version>
         </dependency>
 
         <dependency>
@@ -53,15 +52,15 @@
     <!-- Distribution management -->
     <distributionManagement>
         <repository>
-            <id>rederik-schmitt-releases</id>
+            <id>frederik-schmitt</id>
             <name>Releases</name>
-            <url>http://repo.frederik-schmitt.de/content/repositories/releases</url>
+            <url>http://repo.frederik-schmitt.de/content/repositories/oss-releases</url>
         </repository>
 
         <snapshotRepository>
-            <id>frederik-schmitt-snapshots</id>
+            <id>frederik-schmitt</id>
             <name>Snapshots</name>
-            <url>http://repo.frederik-schmitt.de/content/repositories/snapshots</url>
+            <url>http://repo.frederik-schmitt.de/content/repositories/oss-snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
@@ -72,8 +71,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
         </plugins>
