--- a/pom.xml
+++ b/pom.xml
@@ -23,29 +23,30 @@
 
         <dependency>
             <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>1.3.8</version>
+            <artifactId>HikariCP-java6</artifactId>
+            <version>2.2.2</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jooq</groupId>
             <artifactId>jooq</artifactId>
-            <version>3.3.2</version>
+            <version>3.4.4</version>
         </dependency>
         <dependency>
             <groupId>org.jooq</groupId>
             <artifactId>jooq-meta</artifactId>
-            <version>3.3.2</version>
+            <version>3.4.4</version>
         </dependency>
         <dependency>
             <groupId>org.jooq</groupId>
             <artifactId>jooq-codegen</artifactId>
-            <version>3.3.2</version>
+            <version>3.4.4</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.25</version>
+            <version>5.1.33</version>
         </dependency>
     </dependencies>
 
